fix rd-content wrap, add rd-navbar on main

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -68,7 +68,7 @@ $color-mediateca:     $color-yellow-400;
 $sections: (
 	propuestas: ( color: $color-propuestas ),
 	actividades: ( color: $color-actividades ),
-	herramienta: ( color: $color-herramientas ),
+	herramientas: ( color: $color-herramientas ),
 	orientaciones: ( color: $color-orientaciones ),
 	mediateca: ( color: $color-mediateca )
 ) !default;
