--- a/scss/mixins/mixins.scss
+++ b/scss/mixins/mixins.scss
@@ -1,15 +1,13 @@
 @import './_breakpoints';
 
 @mixin make-container($gutter) {
-	display: flex;
-  flex-wrap: wrap;
+  display: block;
   padding-right: ($gutter / 2);
   padding-left: ($gutter / 2);
 }
 
 @mixin make-content($gutter) {
-  display: flex;
-  flex-wrap: wrap;
+  display: block;
   margin-right: ($gutter / -2);
   margin-left: ($gutter / -2);
   padding-right: ($gutter / 2);
